tests/bad/write-array-arg.pas
program write_array_arg;

var
    a: array[0..1] of integer;

begin
    WriteLn(a)
end.
